# greedy-snake

./: food.py  main.py  pyproject.toml  setting.py  snake.py
